# telegpt

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
prompt/: example.txt  prompt.txt  system.txt
src/: logging.yaml  telegpt.py
src/ai/: __init__.py  ai.py  deepseek.py  gemini.py  null.py  ollama.py  openai.py
src/ai/ai/: ai.py  deepseek.py  gemini.py  ollama.py  openai.py  reflect.py
src/telegram/: __init__.py  client.py
