[tool.poetry]
name = "telegpt"
version = "0.1.0"
description = "telegpt project"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
telethon = "1.38.1"
tqdm = "4.66.2"
argh = "0.29.4"
pyyaml = "6.0.1"
pytz = "2024.2"
tzlocal = "5.2"

[tool.poetry.group.googleai.dependencies]
google-generativeai = "0.8.3"
grpcio = "1.69.0"

[tool.poetry.group.openai.dependencies]
openai = "1.61.0"

[tool.poetry.group.ollama.dependencies]
ollama = "0.4.6"

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
